[package]
name = "brood"
version = "0.1.0"
authors = ["Anders Evensen"]
edition = "2021"
rust-version = "1.60.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/brood"
description = "A fast and flexible entity component system library."
categories = ["data-structures", "game-development", "no-std"]
keywords = ["ecs", "entity", "component", "system", "gamedev"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
either = {version = "1.7.0", default-features = false}
fnv = {version = "1.0.7", default-features = false}
hashbrown = {version = "0.12.3", default-features = false, features = ["inline-more", "raw"]}
rayon = {version = "1.5.3", optional = true}
serde = {version = "1.0.143", default-features = false, features = ["alloc"], optional = true}

[dev-dependencies]
claim = "0.5.0"
rustversion = "1.0.9"
serde_derive = "1.0.143"
serde_test = "1.0.143"
# Temporarily use this fork until https://github.com/dtolnay/trybuild/issues/171 is resolved.
trybuild = {git = "https://github.com/Anders429/trybuild"}

[features]
rayon = ["dep:rayon", "hashbrown/rayon"]
