[package]
name = "brood"
version = "0.9.0"
authors = ["Anders Evensen"]
edition = "2021"
rust-version = "1.65.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/brood"
description = "A fast and flexible entity component system library."
categories = ["data-structures", "game-development", "no-std"]
keywords = ["ecs", "entity", "component", "system", "gamedev"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
either = {version = "1.8.0", default-features = false}
fnv = {version = "1.0.7", default-features = false}
hashbrown = {version = "0.13.1", default-features = false, features = ["inline-more", "raw"]}
rayon = {version = "1.6.0", optional = true}
serde = {version = "1.0.148", default-features = false, features = ["alloc"], optional = true}

[dev-dependencies]
claims = "0.7.1"
rustversion = "1.0.9"
serde_assert = "0.4.0"
serde_derive = "1.0.148"
trybuild = "1.0.72"

[features]
rayon = ["dep:rayon", "hashbrown/rayon"]
serde = ["dep:serde"]
